# SineWaveSpeech

./: .gitignore  CMakeLists.txt  README.md  buildFFTW.sh
cmake_modules/: FindFFTW.cmake
src/: CaptainJack.cpp  CaptainJack.cpp.autosave  FFT.cpp  FFT.hpp  MagnitudeSpectrum.cpp  MagnitudeSpectrum.hpp  ResourcePath.cpp  Sawtooth.hpp  SineWaveSpeech.cpp  SineWaveSpeech.hpp  Sinusoid.hpp  ToneGenerator.hpp  Triangle.hpp  build.sh  captain_jack.cpp  main.cpp
src/simple_fft/: fft_settings.h
